# tokio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  RREADME.md  build-websocket.sh  index.js  ixwebsocket-patched-portfile.cmake  package-lock.json  package.json  setup.sh  youtube-dl.sh
bindings/: index.ts  tsconfig.json
bindings/def/: bot.ts  discord.ts
bindings/impl/: channel.ts  guild.ts  youtube-dl.ts
lib/: bindings.cc  instance.cpp  instance.h
lib/socket/: dis_voice_websocket.cpp  dis_voice_websocket.h  dis_websocket.cpp  dis_websocket.h  discord_utils.h  event_handler.h  utils.h
lib/socket/http/: DisHttpClient.cpp  DisHttpClient.h
lib/voice/: stringutils.h  voice_connection.cpp  voice_connection.h
lib/voice/opus/: opus_wrapper.cc  opus_wrapper.h
lib/voice/udp/: PracticalSocket.cpp
lib/voice/win_mmap/: windows-mmap.c  windows-mmap.h
lib/zstr/: strict_fstream.h  zstr.h
